# Hackprix_Codebricks

./: .env  README.md  index.html  package-lock.json  temp_old_boardroom.tsx  test_market.py
backend/: main.py  pyproject.toml
backend/agent/: aggregator.py  analysis.py  debate.py  document_parser.py  intent_parser.py  market.py  news.py  rag.py  technical.py  voice.py
backend/chroma_db/fbc20aec-fae0-4379-9dba-e6e0cd9b33b0/: index_metadata.pickle
backend/graphs/: pipeline.py  state.py
backend/memory/: mongo.py
backend/utils/: email_service.py  pdf_generator.py
finance-project/: package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BoardroomScreen.tsx  ConnectScreen.tsx  DashboardScreen.tsx  DebatePanel.tsx  FloatingChatAssistant.tsx  HistoryScreen.tsx  LandingScreen.tsx  LoginScreen.tsx  MainLayout.tsx  PaymentModal.tsx  PortfolioScreen.tsx  SettingsScreen.tsx  VerdictReveal.tsx  WatchlistScreen.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/utils/: supabase.ts
src/: App.tsx  index.css  supabaseClient.ts
src/components/: BoardroomScreen.tsx  DebatePanel.tsx  LandingScreen.tsx  MonitoringScreen.tsx  VerdictReveal.tsx
src/utils/: supabase.ts
